# ERA5_converter_for_ILS

./: .gitignore  README.md  pyproject.toml
configs/: convert_default.yaml  prep_default.yaml  submit_default.yaml  submit_pipeline_default.yaml
download/: single_level_download.py
notebooks/: rename_naming_rules.ipynb
perturbed_forcing/: generate_continuous_random_19000101.py  plot_random_timeseries.ipynb  submit_perturb_era5_30min_members_jobs.sh
perturbed_forcing/configs/: submit_perturb_era5_30min_members_default.yaml
perturbed_forcing/helpers/: link_unperturbed_era5_30min_files.py  submit_perturb_era5_30min_members_jobs.py
perturbed_forcing/pf_random/: README.md  __init__.py  ar1_gaussian.py
perturbed_forcing/workers/: perturb_era5_30min_members.py
scripts/: _common.sh  cleanup_incomplete_tmp_files.sh  run_year_var_pipeline_task.sh  run_year_var_task.sh  submit_year_var_jobs.sh  submit_year_var_pipeline_jobs.sh
src/era5_common/: __init__.py  constants.py  formulas.py  io.py  progress.py
src/era5_ils_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/era5_prep/: __init__.py  cli.py  derive_vars.py  io_raw.py  normalize_meta.py  normalize_time.py  prune_vars.py  reorder_dims.py  validate_stage1.py  write_stage1.py
src/era5_to_ils/: __init__.py  cli.py  io_ils.py  io_stage1.py  transform_space.py  transform_vars.py  validate_stage2.py
tests/: test_convert_qair_formula.py  test_end_to_end_smoke.py  test_prep_derive_vars.py  test_prep_time_normalization.py
(+5 files in other folders)
